Settings json, title ready for mobile, ,max.width mediaquery fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,62 +1,13 @@
 {
-    "cSpell.words": [
-        "ABER",
-        "abgespielt",
-        "ansonsten",
-        "auch",
-        "aufleucht",
-        "aufrufen",
-        "Ausserhalb",
-        "auswählen",
-        "begonnen",
-        "beim",
-        "Blinken",
-        "Clickfunction",
-        "Colour",
-        "Colours",
-        "damit",
-        "dieser",
-        "einfügen",
-        "eingegeben",
-        "eingegen",
-        "einmal",
-        "einschalten",
-        "entfern",
-        "erhöhen",
-        "erstellen",
-        "falschen",
-        "Farbe",
-        "Farben",
-        "Fehler",
-        "funktioniert",
-        "FUNKTIONIERT",
-        "ganze",
-        "gedrückt",
-        "geklick",
-        "generiert",
-        "Globale",
-        "grau",
-        "hier",
-        "Hier",
-        "hinzugefügt",
-        "klicken",
-        "nächstes",
-        "pushen",
-        "reagiert",
-        "Richtig",
-        "Sequen",
-        "Sequenz",
-        "später",
-        "startet",
-        "Tastendrunck",
-        "übergeben",
-        "wenn",
-        "Wenn",
-        "wird",
-        "zufällige",
-        "Zufällige",
-        "zugreifen",
-        "zwiischen"
-    ],
-    "livePreview.defaultPreviewPath": "/index.html"
+  "cSpell.language": "en,de,hr",
+  "cSpell.dictionaries": ["de-de", "hr-hr"],
+
+  "cSpell.words": ["Clickfunction", "Colour", "Colours"],
+  "livePreview.defaultPreviewPath": "/index.html",
+
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "prettier.singleQuote": true,
+  "prettier.tabWidth": 2,
+  "prettier.printWidth": 100
 }
